--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
     header h1 {
       font-size: 3rem;
-      color: #4be213;
+      color: white;
       font-weight: 800;
     }
     header p {
@@ -156,7 +156,7 @@
 </head>
 <body>
   <nav>
-    <h1>Gino Ostolaza</h1>
+    <h1>Gino Ostolaza<br>MENTORIA</h1>
     <ul>
       <li><a href="#sobre-mi">Sobre Mí</a></li>
       <li><a href="#contenido">Contenido</a></li>
