--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
     header h1 {
       font-size: 3rem;
-      color: white;
+      color: #4be213;
       font-weight: 800;
     }
     header p {
