--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mentoría | Gino Ostolaza</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="c3a6eaa1-7c56-4720-a695-b0ec71fc95f6.png" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -53,6 +54,7 @@
       font-size: 3rem;
       color: #4be213;
       font-weight: 800;
+      font-family: 'HeadingNow91', sans-serif;
     }
     header p {
       font-size: 1.3rem;
