--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </head>
 <body>
   <nav>
-    <h1>Gino Ostolaza<br>MENTORIA</h1>
+    <h1>Conviértete en un trader bursátil</h1>
     <ul>
       <li><a href="#sobre-mi">Sobre Mí</a></li>
       <li><a href="#contenido">Contenido</a></li>
