--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </head>
 <body>
   <nav>
-    <h1>Conviértete en un trader bursátil</h1>
+    <h1>Gino Ostolaza</h1>
     <ul>
       <li><a href="#sobre-mi">Sobre Mí</a></li>
       <li><a href="#contenido">Contenido</a></li>
@@ -169,7 +169,7 @@
 
   <header>
     <div>
-      <h1>GINO OSTOLAZA | TRADING & COACHING</h1>
+      <h1>OPCIONES BINARIAS & DESARROLLO PERSONAL</h1>
       <p>🚀 Elevá tu mentalidad. Conectá con tu propósito y empezá a generar tus primeros dólares desde casa.</p>
       <a class="btn-primary" href="https://instagram.com/ginoostolazaob?text=Hola%20Gino%20quiero%20GANAR,%20mi%20nombre%20es..." target="_blank">QUIERO APRENDER TRADING</a>
     </div>
