--- a/index.html
+++ b/index.html
@@ -230,15 +230,15 @@
       <br>
       <p>🔥 <strong>Te lo dejo claro:</strong><br>No te prometo resultados mágicos. Pero si ponés el trabajo, los resultados van a llegar. Esto no es solo trading. Es tu nueva mentalidad. Tu nueva vida. Tu próxima versión.<br><strong>Nos vemos en clase, campeón.</strong><br><strong>Es hora de ganar. 🧠💪🏻</strong></p><br>
 
-      <a class="btn-primary" href="https://instagram.com/ginoostolazaob?text=Hola%20Gino%20quiero%20GANAR,%20mi%20nombre%20es..." target="_blank">ESCRIBIME AHORA EN INSTAGRAM</a>
+      <a class="btn-primary" href="https://instagram.com/m/ginoostolazaob" target="_blank">ESCRIBIME "GANAR" AHORA EN INSTAGRAM</a>
     </div>
     <div class="social">
       <p>📲 Seguime en mis redes sociales:</p>
       <a href="https://instagram.com/ginoostolazaob" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram Icon">Instagram
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram Icon">
       </a>
       <a href="https://www.youtube.com/@GinoOstolazaGon" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube Icon">YouTube
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube Icon">
       </a>
     </div>
   </section>
