--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       color: white;
       line-height: 1.6;
     }
+    a {
+      text-decoration: none;
+    }
     nav {
       display: flex;
       justify-content: space-between;
