--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     }
     a {
       text-decoration: none;
+      outline: none;
     }
     nav {
       display: flex;
@@ -174,7 +175,7 @@
     <div>
       <h1>OPCIONES BINARIAS & DESARROLLO PERSONAL</h1>
       <p>🚀 Elevá tu mentalidad. Conectá con tu propósito y empezá a generar tus primeros dólares desde casa.</p>
-      <a class="btn-primary" href="https://instagram.com/ginoostolazaob?text=Hola%20Gino%20quiero%20GANAR,%20mi%20nombre%20es..." target="_blank">QUIERO APRENDER TRADING</a>
+      <a class="btn-primary" href="https://instagram.com/ginoostolazaob" target="_blank">QUIERO APRENDER TRADING</a>
     </div>
   </header>
 
